--- a/onbuild/Dockerfile
+++ b/onbuild/Dockerfile
@@ -1,5 +1,5 @@
-FROM meteorhacks/meteord:base
-MAINTAINER MeteorHacks Pvt Ltd.
+FROM thepfmind/meteord:base
+MAINTAINER thepfmind, thepfmind@gmail.com
 
 ONBUILD COPY ./ /app
 ONBUILD RUN bash $METEORD_DIR/on_build.sh
